Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33472

Assertion `0' failed in Item_row::illegal_method_call on CREATE EVENT

    XMLWordPrintable

Details

    Description

      CREATE EVENT e ON SCHEDULE EVERY 1 HOUR ENDS ROW(1,2) DO SELECT 1;
      

      Leads to:

      11.4.0 9b1ea6904965dd345478dedd80e181ad54c767da (Debug)

      mariadbd: /test/11.4_dbg/sql/item_row.cc:32: void Item_row::illegal_method_call(const char*): Assertion `0' failed.
      

      11.4.0 9b1ea6904965dd345478dedd80e181ad54c767da (Debug)

      Core was generated by `/test/MD060224-mariadb-11.4.0-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=22640987928128)
          at ./nptl/pthread_kill.c:44
      [Current thread is 1 (LWP 4072767)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=22640987928128) at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=22640987928128) at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=22640987928128, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
      #3  0x000014978e642476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
      #4  0x000014978e6287f3 in __GI_abort () at ./stdlib/abort.c:79
      #5  0x000014978e62871b in __assert_fail_base (fmt=0x14978e7dd130 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55605d9ff44a "0", file=0x55605d9f3e40 "/test/11.4_dbg/sql/item_row.cc", line=32, function=<optimized out>) at ./assert/assert.c:92
      #6  0x000014978e639e96 in __GI___assert_fail (assertion=0x55605d9ff44a "0", file=0x55605d9f3e40 "/test/11.4_dbg/sql/item_row.cc", line=32, function=0x55605d9f3ed8 "void Item_row::illegal_method_call(const char*)") at ./assert/assert.c:101
      #7  0x000055605d00dabf in Item_row::illegal_method_call (this=<optimized out>, method=method@entry=0x55605d9f3f08 "get_date") at /test/11.4_dbg/sql/item_row.cc:32
      #8  0x000055605d00e1b0 in Item_row::get_date (this=<optimized out>, thd=<optimized out>, ltime=<optimized out>, fuzzydate=<optimized out>) at /test/11.4_dbg/sql/item_row.h:92
      #9  0x000055605cdaba6c in Event_parse_data::init_ends (this=this@entry=0x149744019098, thd=thd@entry=0x149744000d58) at /test/11.4_dbg/sql/event_parse_data.cc:443
      #10 0x000055605cdac27f in Event_parse_data::check_parse_data (this=this@entry=0x149744019098, thd=thd@entry=0x149744000d58) at /test/11.4_dbg/sql/event_parse_data.cc:514
      #11 0x000055605cd82013 in Events::create_event (thd=thd@entry=0x149744000d58, parse_data=0x149744019098) at /test/11.4_dbg/sql/events.cc:339
      #12 0x000055605cc37b06 in mysql_execute_command (thd=thd@entry=0x149744000d58, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/11.4_dbg/sql/sql_parse.cc:5049
      #13 0x000055605cc3ae39 in mysql_parse (thd=thd@entry=0x149744000d58, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1497840ae1e0) at /test/11.4_dbg/sql/sql_parse.cc:7798
      #14 0x000055605cc3d1fc in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x149744000d58, packet=packet@entry=0x14974400b1c9 "CREATE EVENT e ON SCHEDULE EVERY 1 HOUR ENDS ROW(1,2) DO SELECT 1", packet_length=packet_length@entry=65, blocking=blocking@entry=true) at /test/11.4_dbg/sql/sql_class.h:254
      #15 0x000055605cc3f333 in do_command (thd=0x149744000d58, blocking=blocking@entry=true) at /test/11.4_dbg/sql/sql_parse.cc:1406
      #16 0x000055605cda59fd in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55606038c528, put_in_cache=put_in_cache@entry=true) at /test/11.4_dbg/sql/sql_connect.cc:1417
      #17 0x000055605cda5cf2 in handle_one_connection (arg=arg@entry=0x55606038c528) at /test/11.4_dbg/sql/sql_connect.cc:1319
      #18 0x000055605d1f2e9a in pfs_spawn_thread (arg=0x5560602fd648) at /test/11.4_dbg/storage/perfschema/pfs.cc:2201
      #19 0x000014978e694ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #20 0x000014978e726850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Bug confirmed present in:
      MariaDB: 10.4.33 (dbg), 10.5.24 (dbg), 10.6.17 (dbg), 10.11.7 (dbg), 11.0.5 (dbg), 11.1.4 (dbg), 11.2.3 (dbg), 11.3.2 (dbg), 11.4.0 (dbg)
      MySQL: 5.5.62 (dbg), 5.6.51 (dbg), 5.7.44 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.33 (opt), 10.5.24 (opt), 10.6.17 (opt), 10.11.7 (opt), 11.0.5 (opt), 11.1.4 (opt), 11.2.3 (opt), 11.3.2 (opt), 11.4.0 (opt)
      MySQL: 5.5.62 (opt), 5.6.51 (opt), 5.7.44 (opt), 8.0.36 (dbg), 8.0.36 (opt)

      Btw, MySQL 5.5 fails with

      0|SIGABRT|Item_row::illegal_method_call|Item_row::val_int|Item::get_date|Event_parse_data::init_ends
      

      Whereas 5.6 and 5.7 have the same stack as above.

      Attachments

        Activity

          People

            bar Alexander Barkov
            Roel Roel Van de Paar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5h
                5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.