MDEV-33472 Assertion `0' failed in Item_row::illegal_method_call on CREATE EVENT

Do not accept rows as event parameters.